--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="date">Date</string>
     <string name="note">Note</string>
     <string name="add_transaction">Add Transaction</string>
+    <string name="set_budget">Set Budget</string>
     <string name="back">Back</string>
     <string name="details">Details</string>
     <string name="add_few_details_before_you_continue">Add Few details before You Continue…</string>
