--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,16 @@
     <string name="note">Note</string>
     <string name="add_transaction">Add Transaction</string>
     <string name="set_budget">Set Budget</string>
+    <string name="budget_amount">Budget Amount</string>
+    <string name="enter_budget">Enter Budget</string>
+    <string name="period_value">Period Value</string>
+    <string name="enter_period_value">Enter Period Value</string>
+    <string name="select_period_type">Select Period Type</string>
+    <string name="days">Days</string>
+    <string name="weeks">Weeks</string>
+    <string name="months">Months</string>
     <string name="back">Back</string>
+    <string name="apply">Apply</string>
     <string name="details">Details</string>
     <string name="add_few_details_before_you_continue">Add Few details before You Continue…</string>
     <string name="your_name">Your Name</string>
