--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,9 @@
     <string name="period_value">Period Value</string>
     <string name="enter_period_value">Enter Period Value</string>
     <string name="select_period_type">Select Period Type</string>
+    <string name="select_transaction_type">Select Transaction Type</string>
+    <string name="spending">Spending</string>
+    <string name="profit">Profit</string>
     <string name="days">Days</string>
     <string name="weeks">Weeks</string>
     <string name="months">Months</string>
