--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="name_">Name :</string>
     <string name="are_you_sure_want_to_delete_the_transaction">Are you sure, want to delete the Transaction?</string>
     <string name="cancel">Cancel</string>
+    <string name="ok">OK</string>
     <string name="delete">Delete</string>
     <string name="logo">Logo</string>
     <string name="all">All</string>
