--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="enter_period_value">Enter Period Value</string>
     <string name="select_period_type">Select Period Type</string>
     <string name="select_transaction_type">Select Transaction Type</string>
+    <string name="logout">Logout</string>
     <string name="spending">Spending</string>
     <string name="profit">Profit</string>
     <string name="days">Days</string>
